# yabot

./: .aider.chat.history.md  .aider.input.history  .bandit  .coverage  .env  .env.example  .env~  .gitignore  AGENTS.md  CLAUDE.md  GUIA_DESARROLLO.md  INTEGRATION_TESTS_SUMMARY.md  MENU_SYSTEM_ANALYSIS.md  MENU_SYSTEM_ENHANCEMENT_SUMMARY.md  MENU_SYSTEM_IMPLEMENTATION_COMPLETE.md  README.md  SHUTDOWN_FIX_SUMMARY.md  both  config.py  diagnostic_bot.sh  event_queue.pkl  event_retry_queue.pkl  execute_fase1_tasks.py  execute_fase1_tasks_21_to_29_min.py  fase1_tasks_21_to_29_execution_report.md  fase1_tasks_execution_report.md  fix_bot_shutdown.py  fix_expiration_test.py  h.py  init_replica_set.py  investigación_desarrollo.md  main.py  makefile  manage_test_services.sh  mis_aliases.sh  module_registry.json  monitor_bot_realtime.sh  pyproject.toml  pytest.ini  q  (+36 more)
.aider.tags.cache.v4/: cache.db  cache.db-shm  cache.db-wal
.claude.backup-2025-09-19T20-38-40-305Z/: settings.local.json
commands/: formato.py
database/: db.json  user_db.py
deploy_env/: pyvenv.cfg
docs/: EJEMPLOS_MODIFICACION_TESTS.md  GUIA_TESTS_FLUJOS.md  ORGANIC_MENU_SYSTEM_SUMMARY.md  REPORTE_FUNCIONALIDADES_SISTEMA.md  concepto.md  fix_menu.md  index.md  organic_menu_system_design.md  psicologia_diana.md
examples/: organic_menu_integration.py
handlers/: help.py  start.py
scripts/: migrate_to_fase1.py  run_integration_tests.sh  run_tests.sh
src/: __init__.py  dependencies.py  main.py
tests/: __init__.py  conftest.py  test_api_server.py  test_auth_service.py  test_basic_functionality.py  (+23 more)
(+617 files in other folders)
